# This file is part of particleChase.
# Makefile.am in particleChase
# included non-recursively from toplevel directory

bin_PROGRAMS += particleChase/particleChase
particleChase_particleChase_SOURCES = particleChase/particleChase.c particleChase/list.c particleChase/world.c
LINT_CSOURCES += $(particleChase_particleChase_SOURCES) 
